fix js includes

--- a/pages/index.html
+++ b/pages/index.html
@@ -8,8 +8,8 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link rel="stylesheet" type="text/css" href="../css/app.css">
-    <link rel="stylesheet" type="text/css" href="../css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="../css/app.css" />
+    <link rel="stylesheet" type="text/css" href="../css/responsive.css" />
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -133,19 +133,19 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/bootstrap-transition.js"></script>
-    <script src="js/bootstrap-alert.js"></script>
-    <script src="js/bootstrap-modal.js"></script>
-    <script src="js/bootstrap-dropdown.js"></script>
-    <script src="js/bootstrap-scrollspy.js"></script>
-    <script src="js/bootstrap-tab.js"></script>
-    <script src="js/bootstrap-tooltip.js"></script>
-    <script src="js/bootstrap-popover.js"></script>
-    <script src="js/bootstrap-button.js"></script>
-    <script src="js/bootstrap-collapse.js"></script>
-    <script src="js/bootstrap-carousel.js"></script>
-    <script src="js/bootstrap-typeahead.js"></script>
+    <script src="../lib/jquery-1.8.3.min.js"></script>
+    <script src="../lib/bootstrap-transition.js"></script>
+    <script src="../lib/bootstrap-alert.js"></script>
+    <script src="../lib/bootstrap-modal.js"></script>
+    <script src="../lib/bootstrap-dropdown.js"></script>
+    <script src="../lib/bootstrap-scrollspy.js"></script>
+    <script src="../lib/bootstrap-tab.js"></script>
+    <script src="../lib/bootstrap-tooltip.js"></script>
+    <script src="../lib/bootstrap-popover.js"></script>
+    <script src="../lib/bootstrap-button.js"></script>
+    <script src="../lib/bootstrap-collapse.js"></script>
+    <script src="../lib/bootstrap-carousel.js"></script>
+    <script src="../lib/bootstrap-typeahead.js"></script>
 
   </body>
 </html>
