--- a/pages/index.html
+++ b/pages/index.html
@@ -113,15 +113,73 @@
 
     </div>
 
-    <div class="row">
 
-      <div class="span9">
-      </div>
-
-      <div class="span3">
-      </div>
-
-    </div>
+	 
+	 <div class="row">
+	 	<div class="cards span9">
+	 	
+	 		<section class="card card-list card-list-latest">
+	 			<h2>פעילות אחרונה</h2>
+	 			<a class="btn btn-mini btn-question" href="#"><i class="icon-question-sign"></i> ?</a>
+	 			<ul>
+		 			<li>
+		 				<p class="item-action">הגיש הצעת חוק</p>
+		 				<p class="item-title"><a href="#">חוק גנים לאומיים תיקון - היתר לניהול אתר הנצחה ממלכתי גבעת התחמושת</a></p>
+		 				<p class="item-context">אתמול ב<a href="#">ועדת החינוך התרבות והספורט</a></p>
+		 			</li>
+		 			<li>
+		 				<p class="item-action">הגיש הצעת חוק</p>
+		 				<p class="item-title"><a href="#">חוק הגנה על הורים בעת שמירה על שלום ילדיהם הקטינים תיקוני חקיקה</a></p>
+		 				<p class="item-context">יום רביעי, ה-25 ביולי, ב<a href="#">מליאה</a></p>
+		 			</li>
+	 			</ul>
+	 			<button class="btn btn-mini btn-more" type="button">עוד +</button>
+	 		</section>
+	 	
+	 	
+	 		<section class="card card-list card-list-latest">
+	 			<h2>חקיקה</h2>
+	 			<a class="btn btn-mini btn-question" href="#"><i class="icon-question-sign"></i> ?</a>
+	 			<ul>
+		 			<li>
+		 				<p class="item-action">הגיש הצעת חוק</p>
+		 				<p class="item-title"><a href="#">חוק גנים לאומיים תיקון - היתר לניהול אתר הנצחה ממלכתי גבעת התחמושת</a></p>
+		 				<p class="item-context">אתמול ב<a href="#">ועדת החינוך התרבות והספורט</a></p>
+		 			</li>
+		 			<li>
+		 				<p class="item-action">הגיש הצעת חוק</p>
+		 				<p class="item-title"><a href="#">חוק הגנה על הורים בעת שמירה על שלום ילדיהם הקטינים תיקוני חקיקה</a></p>
+		 				<p class="item-context">יום רביעי, ה-25 ביולי, ב<a href="#">מליאה</a></p>
+		 			</li>
+	 			</ul>
+	 			<button class="btn btn-mini btn-more" type="button">עוד +</button>
+	 		</section>
+	 	
+	 	
+	 		<section class="card card-list card-list-latest">
+	 			<h2>ועדות</h2>
+	 			<a class="btn btn-mini btn-question" href="#"><i class="icon-question-sign"></i> ?</a>
+	 			<ul>
+		 			<li>
+		 				<p class="item-action">הגיש הצעת חוק</p>
+		 				<p class="item-title"><a href="#">חוק גנים לאומיים תיקון - היתר לניהול אתר הנצחה ממלכתי גבעת התחמושת</a></p>
+		 				<p class="item-context">אתמול ב<a href="#">ועדת החינוך התרבות והספורט</a></p>
+		 			</li>
+		 			<li>
+		 				<p class="item-action">הגיש הצעת חוק</p>
+		 				<p class="item-title"><a href="#">חוק הגנה על הורים בעת שמירה על שלום ילדיהם הקטינים תיקוני חקיקה</a></p>
+		 				<p class="item-context">יום רביעי, ה-25 ביולי, ב<a href="#">מליאה</a></p>
+		 			</li>
+	 			</ul>
+	 			<button class="btn btn-mini btn-more" type="button">עוד +</button>
+	 		</section>
+	 	
+	 	</div>
+	 	<aside class="span3">
+	 		
+	 	</aside>
+	 </div>
+	 
       <hr>
 
       <footer>
