--- a/pages/index.html
+++ b/pages/index.html
@@ -21,7 +21,7 @@
 
   <body>
 
-  <header>
+  <header id="app-header">
       <div class="container">
           <div class="row">
             <div id="logo" class="span4">
@@ -175,8 +175,28 @@
 	 		</section>
 	 	
 	 	</div>
-	 	<aside class="span3">
+
+	 	<div class="span3">	 		
+	 		<aside class="sidebar sidebar-agendas">
+	 			<h2>אג'נדות בולטות</h2>
+	 			<a class="btn btn-mini btn-question" href="#"><i class="icon-question-sign"></i> ?</a>
+	 			<ul>
+		 			<li class="agenda-mini">
+		 				<header>
+		 					<img src="../img/user-pic.png" alt="user-pic" width="30" height="30">
+		 					<h3><span>קידום חינוך ציבורי איכותי</span>
+		 					בעריכת <a href="#">חינוך לישראל</a></h3>
+		 				</header>
+		 				<div class="agenda-pie">
+		 					<span class="agenda-percent"><span>56%</span>התאמה</span>
+		 				</div>
+		 			</li>
+	 			</ul>
+	 		</aside>
 	 		
+	 		<aside class="sidebar note-worthy">
+	 			
+	 		</aside>
 	 	</aside>
 	 </div>
 	 
