add borders to main card

--- a/pages/index.html
+++ b/pages/index.html
@@ -73,40 +73,34 @@
             </div>
           </div>
 
-          <div class="span7">
+          <div class="span7 mp-details">
             <div class="spacer fill">
               <header>
                 <h1>זבולון אורלב</h1>
               </header>
               <p>הבית היהודי - המפד"ל החדשה <strong>(בקואליציה)</strong></p>
               <p>יו"ר בוועדת החינוך, התרבות והספורט | יו"ר הועדה לשלום הילד</p>
+              <ul class="links">
+                <li><a>צור קשר</a></li>
+                <li><a>תפקידים נוספים</a></li>
+                <li><a>פרטים אישיים</a></li>
+              </ul>
             </div>
           </div>
 
-          <div class="span3">
+          <div class="span3 social-details">
             <div class="spacer actions-panel">
               <a class="btn btn-big">עקוב</a>
               <p class="text-center">1,123 עוקבים</p>
+              <ul class="text-center">
+                <li><a>W</a></li>
+                <li><a>T</a></li>
+                <li><a>Wiki</a></li>
+                <li><a>F</a></li>
+              </ul>
             </div>
           </div>
         </div>
-        <footer class="row">
-          <div class="span7 offset2">
-            <ul>
-              <li><a>צור קשר</a></li>
-              <li><a>תפקידים נוספים</a></li>
-              <li><a>פרטים אישיים</a></li>
-            </ul>
-          </div>
-          <div class="span3">
-            <ul class="text-center">
-              <li><a>W</a></li>
-              <li><a>T</a></li>
-              <li><a>Wiki</a></li>
-              <li><a>F</a></li>
-            </ul>
-          </div>
-        </footer>
       </section>
       <div class="row">
 	 	    <div class="cards span9">
