--- a/pages/index.html
+++ b/pages/index.html
@@ -36,7 +36,9 @@
         <div id="login" class="span3 dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">
             <b class="caret"></b>
-            <img src="../img/user-pic.png" alt="user-pic" width="36" height="36" />
+            <span class="user-pic">
+              <img src="../img/user-pic.png" alt="user-pic" width="36" height="36" />
+            </span>
           </a>
           <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
             <li><a href="#">הגדרות</a></li>
@@ -93,10 +95,10 @@
               <a class="btn btn-big">עקוב</a>
               <p class="text-center">1,123 עוקבים</p>
               <ul class="text-center">
-                <li><a>W</a></li>
-                <li><a>T</a></li>
-                <li><a>Wiki</a></li>
-                <li><a>F</a></li>
+                <li><a class="icon sprite-website">W</a></li>
+                <li><a class="icon sprite-twitter">T</a></li>
+                <li><a class="icon sprite-wiki">Wiki</a></li>
+                <li><a class="icon sprite-facebook">F</a></li>
               </ul>
             </div>
           </div>
