add social icons positioning

--- a/pages/index.html
+++ b/pages/index.html
@@ -94,12 +94,15 @@
             <div class="spacer actions-panel">
               <a class="btn btn-big">עקוב</a>
               <p class="text-center">1,123 עוקבים</p>
-              <ul class="text-center">
-                <li><a class="icon sprite-website">W</a></li>
-                <li><a class="icon sprite-twitter">T</a></li>
-                <li><a class="icon sprite-wiki">Wiki</a></li>
-                <li><a class="icon sprite-facebook">F</a></li>
-              </ul>
+              <div class="social-links">
+                <h5>תוכלו למצוא אותו גם ב:</h5>
+                <ul class="text-center">
+                  <li><a class="icon sprite-website">W</a></li>
+                  <li><a class="icon sprite-twitter">T</a></li>
+                  <li><a class="icon sprite-wiki">Wiki</a></li>
+                  <li><a class="icon sprite-facebook">F</a></li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
