add search form styling

--- a/pages/index.html
+++ b/pages/index.html
@@ -26,10 +26,14 @@
             <span>כנסת פתוחה</span>
           </a>
         </div>
-        <div id="search" class="span5">
+        <div class="span5">
           <form class="form-search">
-            <input type="text" class="input-medium search-query" />
-            <button type="submit" class="btn">Search</button>
+            <div>
+              <input type="text" class="span5 search-query" placeholder="חיפוש" />
+              <button type="submit">
+                <i class="icon icon-search"></i>
+              </button>
+            </div>
           </form>
         </div>
 
