--- a/pages/index.html
+++ b/pages/index.html
@@ -111,7 +111,7 @@
 	 		    <section class="card card-list card-list-latest">
 	 			    <header>
                <h2>פעילות אחרונה</h2>
-               <a class="btn btn-mini btn-question" href="#"><i class="icon-question-sign"></i> ?</a>
+               <a class="btn btn-mini btn-question" href="#">?</a>
 	 			    </header>
 	 			    <ul>
               <li>
@@ -133,7 +133,7 @@
 	 		    <section class="card card-list card-list-latest">
 	 			    <header>
                <h2>חקיקה</h2>
-               <a class="btn btn-mini btn-question" href="#"><i class="icon-question-sign"></i> ?</a>
+               <a class="btn btn-mini btn-question" href="#">?</a>
 	 			    </header>
             <ul>
               <li>
@@ -155,7 +155,7 @@
           <section class="card card-list card-list-latest">
             <header>
               <h2>ועדות</h2>
-              <a class="btn btn-mini btn-question" href="#"><i class="icon-question-sign"></i> ?</a>
+               <a class="btn btn-mini btn-question" href="#">?</a>
             </header>
             <ul>
               <li>
@@ -179,7 +179,7 @@
 	 	
 	 		<aside class="sidebar sidebar-agendas">
 	 			<h2>אג'נדות בולטות</h2>
-	 			<a class="btn btn-mini btn-question" href="#"><i class="icon-question-sign"></i> ?</a>
+	 			<a class="btn btn-mini btn-question" href="#">?</a>
 	 			<ul>
 		 			<li class="agenda-mini">
 		 				<header>
@@ -227,7 +227,7 @@
 	 		
 	 		<aside class="sidebar note-worthy">
 	 			<h2>ראוי לציון</h2>
-	 			<a class="btn btn-mini btn-question" href="#"><i class="icon-question-sign"></i> ?</a>
+	 			<a class="btn btn-mini btn-question" href="#">?</a>
 	 			<ul>
 		 			<li class="note-worthy-note note-worthy-presence note-worthy-good">
 		 				<header>
