more buttons work

--- a/pages/index.html
+++ b/pages/index.html
@@ -110,6 +110,7 @@
             </div>
           </div>
         </div>
+        <a class="btn btn-mini btn-expand">עוד +</a>
       </section>
       <div class="row">
 	 	    <div class="cards span9">
@@ -131,7 +132,7 @@
               </li>
 	 			    </ul>
 	 			    <footer>
-               <a class="btn btn-mini btn-more">עוד +</a>
+               <a class="btn btn-mini btn-expand">עוד +</a>
 	 			    </footer>
 	 		    </section>
 
@@ -153,7 +154,7 @@
               </li>
             </ul>
             <footer>
-              <a class="btn btn-mini btn-more">עוד +</a>
+              <a class="btn btn-mini btn-expand">עוד +</a>
             </footer>
 	 		    </section>
 
@@ -175,7 +176,7 @@
               </li>
             </ul>
             <footer>
-              <a class="btn btn-mini btn-more">עוד +</a>
+              <a class="btn btn-mini btn-expand">עוד +</a>
             </footer>
           </section>
 	 	    </div> <!-- /span9 -->
