Implemented agneda pie chart

--- a/pages/index.html
+++ b/pages/index.html
@@ -182,9 +182,7 @@
 		 					<h3><span>קידום חינוך ציבורי איכותי</span>
 		 					בעריכת <a href="#">חינוך לישראל</a></h3>
 		 				</header>
-		 				<div class="agenda-pie">
-		 					<span class="agenda-percent"><span>56%</span>התאמה</span>
-		 				</div>
+		 				<div class="agenda-pie"></div>
 		 			</li>
 	 			</ul>
 	 		</aside>
@@ -218,5 +216,8 @@
     <script src="../lib/bootstrap-collapse.js"></script>
     <script src="../lib/bootstrap-carousel.js"></script>
     <script src="../lib/bootstrap-typeahead.js"></script>
+    <script src="../lib/d3.js"></script>
+    <script src="../charts/mk-pie.js"></script>
+    <script src="../src/agenda-pie.js"></script>
   </body>
 </html>
