worked on card layout fixes

--- a/pages/index.html
+++ b/pages/index.html
@@ -17,7 +17,7 @@
     <![endif]-->
     <link rel="shortcut icon" href="ico/favicon.png" />
   </head>
-  <body>
+  <body class="mk-page">
     <header id="app-header" class="container">
       <div class="row">
         <div id="logo" class="span4">
@@ -79,38 +79,34 @@
             </div>
           </div>
 
-          <div class="span7 mp-details">
+          <div class="span7 card-details">
             <div class="spacer fill">
               <header>
                 <h1>זבולון אורלב</h1>
               </header>
               <p>הבית היהודי - המפד"ל החדשה <strong>(בקואליציה)</strong></p>
-              <p>יו"ר בוועדת החינוך, התרבות והספורט | יו"ר הועדה לשלום הילד</p>
-              <ul class="links">
-                <li><a>צור קשר</a></li>
-                <li><a>תפקידים נוספים</a></li>
-                <li><a>פרטים אישיים</a></li>
-              </ul>
+              <p>יו"ר בוועדת החינוך, התרבות והספורט | יו"ר הועדה לשלום הילד | <a href="#">עוד +</a></p>
+              <div class="social-links">
+                <h5>זבולון ברשת:</h5>
+                <ul class="text-center">
+                  <li><a href="#" class="icon sprite-website" rel="tooltip" title="האתר של זבולון">אתר</a></li>
+                  <li><a href="#" class="icon sprite-wiki" rel="tooltip" title="זבולון בויקיפדיה">ויקיפדיה</a></li>
+                  <li><a href="#" class="icon sprite-facebook" rel="tooltip" title="זבולון בפייסבוק">פייסבוק</a></li>
+                  <li><a href="#" class="icon sprite-twitter" rel="tooltip" title="זבולון בטוויטר">טוויטר</a></li>
+                </ul>
+              </div>
             </div>
           </div>
 
           <div class="span3 social-details">
             <div class="spacer actions-panel">
-              <a class="btn btn-big">עקוב</a>
+              <a class="btn btn-big btn-primary">עקוב</a>
               <p class="text-center">1,123 עוקבים</p>
-              <div class="social-links">
-                <h5>תוכלו למצוא אותו גם ב:</h5>
-                <ul class="text-center">
-                  <li><a class="icon sprite-website">W</a></li>
-                  <li><a class="icon sprite-twitter">T</a></li>
-                  <li><a class="icon sprite-wiki">Wiki</a></li>
-                  <li><a class="icon sprite-facebook">F</a></li>
-                </ul>
-              </div>
+              <a class="btn btn-big btn-contact">צרו קשר</a>
             </div>
           </div>
         </div>
-        <a class="btn btn-mini btn-expand">עוד +</a>
+        <a class="btn btn-mini btn-expand">פרטים אישיים +</a>
       </section>
       <div class="row">
 	 	    <div class="cards span9">
