--- a/pages/party.html
+++ b/pages/party.html
@@ -67,24 +67,24 @@
       <ul class="breadcrumb">
         <li><a class="home-icon" href="#">דף בית</a> <span class="divider">/</span></li>
         <li><a href="#">ח"כים וסיעות</a> <span class="divider">/</span></li>
-        <li><a href="#">הבית היהודי</a> <span class="divider">/</span></li>
-        <li class="active">זבולון אורלב</li>
+        <li class="active">העבודה</li>
       </ul>
 
       <section class="card card-main-party">
         <div class="row">
-          <div class="span8 mp-details">
+          <div class="span8 card-details">
             <div class="spacer fill">
               <header>
-                <h1>מפלגת העבודה</h1>
+                <h1>העבודה</h1>
+                <p>(באופוזיציה)</p>
               </header>
-              <p>(באופוזיציה)</p>
               <div class="social-links">
+                <h5>העבודה ברשת:</h5>
                 <ul class="text-center">
-                  <li><a class="icon sprite-website">W</a></li>	<!-- WTF? -->
-                  <li><a class="icon sprite-twitter">T</a></li>	<!-- Is this the abbreviation we really want here? -->
-                  <li><a class="icon sprite-wiki">Wiki</a></li>
-                  <li><a class="icon sprite-facebook">F</a></li>
+                  <li><a href="#" class="icon sprite-website" rel="tooltip" title="האתר של העבודה">אתר</a></li>
+                  <li><a href="#" class="icon sprite-wiki" rel="tooltip" title="העבודה בויקיפדיה">ויקיפדיה</a></li>
+                  <li><a href="#" class="icon sprite-facebook" rel="tooltip" title="העבודה בפייסבוק">פייסבוק</a></li>
+                  <li><a href="#" class="icon sprite-twitter" rel="tooltip" title="העבודה בטוויטר">טוויטר</a></li>
                 </ul>
               </div>
             </div>
@@ -92,9 +92,9 @@
 
           <div class="span4 social-details">
             <div class="spacer actions-panel">
-              <a class="btn btn-big">עקבו אחרי העבודה</a>
+              <a class="btn btn-big btn-primary">עקבו אחרי העבודה</a>
               <p class="text-center">1,123 עוקבים</p>
-				  <a class="btn btn-contact">צור קשר</a>
+              <a class="btn btn-big btn-contact">צרו קשר</a>
             </div>
           </div>
         </div>
