Show numbers only with .numbered

--- a/pages/party.html
+++ b/pages/party.html
@@ -100,7 +100,7 @@
         </div>
       </section>
 		
-		<div class="card card-party-members">
+		<div class="card card-party-members numbered">
 			<div>
 				<div class="party-member-photo" style="background: black;">
 					<div class="party-member-info">
